force-app/main/default/objects/Negotiation__c/Negotiation__c.object-meta.xml
<CustomObject>
    <label>Negotiation</label>
    <nameField>
        <displayFormat>NEG-{00000}</displayFormat>
        <label>Negotiation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Negotiations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>