force-app/main/default/objects/Negotiation__c/fields/Actual_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Payment_Amount__c</fullName>
    <label>Original Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>