force-app/main/default/objects/Negotiation__c/fields/Creditor__c.field-meta.xml
<CustomField>
    <fullName>Creditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creditor</label>
    <referenceTo>Creditor__c</referenceTo>
    <relationshipLabel>Negotiations</relationshipLabel>
    <relationshipName>Negotiations</relationshipName>
    <type>Lookup</type>
</CustomField>