force-app/main/default/objects/Negotiation__c/fields/Creditor_Representative__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Representative__c</fullName>
    <label>Creditor Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>