force-app/main/default/objects/Negotiation__c/fields/Creditors_List__c.field-meta.xml
<CustomField>
    <fullName>Creditors_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creditors List</label>
    <referenceTo>CreditorOpportunity__c</referenceTo>
    <relationshipLabel>Negotiations</relationshipLabel>
    <relationshipName>Negotiations</relationshipName>
    <type>Lookup</type>
</CustomField>