force-app/main/default/objects/Negotiation__c/fields/Final_Agreed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Agreed_Amount__c</fullName>
    <description>Final Settlement Balance</description>
    <inlineHelpText>Final Settlement Balance</inlineHelpText>
    <label>Final Agreed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>