force-app/main/default/objects/Negotiation__c/fields/Negotiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Date__c</fullName>
    <label>Negotiation Date</label>
    <type>DateTime</type>
</CustomField>