force-app/main/default/objects/Negotiation__c/fields/Negotiation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Notes__c</fullName>
    <label>Negotiation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>