force-app/main/default/objects/Negotiation__c/fields/Negotiation_Status__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Status__c</fullName>
    <label>Negotiation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Client Approved</fullName>
            </value>
            <value>
                <fullName>Client Declined</fullName>
            </value>
            <value>
                <fullName>Client Defaulted</fullName>
            </value>
            <value>
                <fullName>Client Late-Offer Expired</fullName>
            </value>
            <value>
                <fullName>Client Pay</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Contact Attempted</fullName>
            </value>
            <value>
                <fullName>Creditor Accepted</fullName>
            </value>
            <value>
                <fullName>Creditor Declined</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Insufficient Funds</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Lender Drafting The Client&apos;s Account</fullName>
            </value>
            <value>
                <fullName>Negotiation In Process</fullName>
            </value>
            <value>
                <fullName>Negotiations Paused</fullName>
            </value>
            <value>
                <fullName>Negotiator Declined</fullName>
            </value>
            <value>
                <fullName>Not Active</fullName>
            </value>
            <value>
                <fullName>Offer Made</fullName>
            </value>
            <value>
                <fullName>Payment Plan - Active</fullName>
            </value>
            <value>
                <fullName>Payment Plan - Suspended</fullName>
            </value>
            <value>
                <fullName>Pending Client Approval</fullName>
            </value>
            <value>
                <fullName>POA On File</fullName>
            </value>
            <value>
                <fullName>POA Out</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Simulate Active Settl. Plan</fullName>
            </value>
            <value>
                <fullName>To Payment Processing</fullName>
            </value>
            <value>
                <fullName>Waiting for Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>