force-app/main/default/objects/Negotiation__c/fields/Negotiation_Type__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Type__c</fullName>
    <label>Negotiation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>