force-app/main/default/objects/Negotiation__c/fields/New_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Payment_Amount__c</fullName>
    <label>New Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>