force-app/main/default/objects/Negotiation__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Settlement Reached</fullName>
            </value>
            <value>
                <fullName>No Agreement</fullName>
            </value>
            <value>
                <fullName>Payment Plan Agreed</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>