force-app/main/default/objects/Negotiation__c/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <label>Payment Due Date</label>
    <type>DateTime</type>
</CustomField>