force-app/main/default/objects/Negotiation__c/fields/Settlement_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Offer_Amount__c</fullName>
    <label>Settlement Offer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>